--- a/client/src/app/site/pages/login/modules/login-wrapper/components/login-wrapper/login-wrapper.component.html
+++ b/client/src/app/site/pages/login/modules/login-wrapper/components/login-wrapper/login-wrapper.component.html
@@ -2,7 +2,7 @@
     <div class="content-wrapper">
         <mat-toolbar class="login-logo-bar" color="primary">
             <a routerLink="/login" [queryParams]="{ checkBrowser: false }">
-                <img alt="OpenSlides-logo" src="assets/img/openslides-logo-dark.svg" />
+                <img alt="OpenSlides-logo" src="assets/img/esjednice-logo-dark.png" />
             </a>
         </mat-toolbar>
 
