--- a/client/src/app/ui/modules/sidenav/components/sidenav/sidenav.component.html
+++ b/client/src/app/ui/modules/sidenav/components/sidenav/sidenav.component.html
@@ -62,7 +62,7 @@
         <div class="copyright-sign-container padding-bottom-20">
             <a
                 class="copyright-link"
-                href="https://openslides.com"
+                href="https://e-sjednice.com"
                 mat-menu-item
                 target="_blank"
                 (click)="mobileAutoCloseNav()"
@@ -70,7 +70,7 @@
                 <span>
                     <small>
                         <os-copyright-sign></os-copyright-sign>
-                        &nbsp;Copyright by OpenSlides
+                        &nbsp;Copyright by e-sjednice.com
                     </small>
                 </span>
             </a>
