--- a/client/src/app/site/modules/info/components/legal-notice-content/legal-notice-content.component.html
+++ b/client/src/app/site/modules/info/components/legal-notice-content/legal-notice-content.component.html
@@ -39,10 +39,10 @@
             @if (versionInfo | async; as version) {
                 <mat-divider></mat-divider>
                 <div class="version-text">
-                    OpenSlides Version:
+                    e-sjednice Version:
                     <a
                         class="italic"
-                        href="https://support.openslides.com/help/de-de/45-uber-openslides/80-versionshistorie"
+                        href="https://e-sjednice.com"
                         target="_blank"
                     >
                         {{ version }}
