--- a/client/src/app/site/pages/login/modules/login-wrapper/components/login-wrapper/login-wrapper.component.html
+++ b/client/src/app/site/pages/login/modules/login-wrapper/components/login-wrapper/login-wrapper.component.html
@@ -2,7 +2,7 @@
     <div class="content-wrapper">
         <mat-toolbar class="login-logo-bar" color="primary">
             <a routerLink="/login" [queryParams]="{ checkBrowser: false }">
-                <img alt="OpenSlides-logo" src="assets/img/esjednice-logo-dark.png" />
+                <img alt="e-sjednice-logo" src="assets/img/esjednice-logo-dark.png" />
             </a>
         </mat-toolbar>
 
@@ -11,7 +11,7 @@
         </div>
 
         <div class="footer">
-            <a href="https://openslides.com" target="_bank">© Copyright by OpenSlides</a>
+            <a href="https://e-sjednice.com" target="_bank">© Copyright by e-sjednice.com</a>
             &middot;
             <a routerLink="legalnotice">
                 {{ 'Legal notice' | translate }}
